@@ -22,6 +22,9 @@
     <java.version>1.8</java.version>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
+    <breeze.version>0.12</breeze.version>
+    <spark.version>2.0.0</spark.version>
+    <netlib.java.version>1.1.2</netlib.java.version>
   </properties>
   
   <dependencies>
@@ -68,29 +71,158 @@
         <version>4.11</version>
         <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.scalanlp</groupId>
+          <artifactId>breeze_${scala.binary.version}</artifactId>
+          <version>${breeze.version}</version>
+          <exclusions>
+              <!-- This is included as a compile-scoped dependency by jtransforms, which is
+                   a dependency of breeze. -->
+              <exclusion>
+                  <groupId>junit</groupId>
+                  <artifactId>junit</artifactId>
+              </exclusion>
+              <exclusion>
+                  <groupId>org.apache.commons</groupId>
+                  <artifactId>commons-math3</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>org.scalanlp</groupId>
+          <artifactId>breeze-viz_${scala.binary.version}</artifactId>
+          <version>${breeze.version}</version>
+          <exclusions>
+              <!-- This is included as a compile-scoped dependency by jtransforms, which is
+                   a dependency of breeze. -->
+              <exclusion>
+                  <groupId>junit</groupId>
+                  <artifactId>junit</artifactId>
+              </exclusion>
+              <exclusion>
+                  <groupId>org.apache.commons</groupId>
+                  <artifactId>commons-math3</artifactId>
+              </exclusion>
+          </exclusions>
+      </dependency>
+      <dependency>
+          <groupId>com.cloudera.sparkts</groupId>
+          <artifactId>sparkts</artifactId>
+          <version>0.4.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      <dependency>
+	<groupId>com.github.fommil.netlib</groupId>
+	<artifactId>all</artifactId>
+	<version>1.1.2</version>
+	<type>pom</type>
+      </dependency>
   </dependencies>
-  
   <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>net.alchim31.maven</groupId>
-        <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.2</version>
-      </plugin>
-       <!-- Scalatest runs all Scala tests -->
-       <plugin>
-         <groupId>org.scalatest</groupId>
-         <artifactId>scalatest-maven-plugin</artifactId>
-         <version>1.0</version>
-       </plugin>
+        <!-- compiles scala -->
+        <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <version>3.2.2</version>
+            <configuration>
+                <scalaVersion>${scala.version}</scalaVersion>
+                <javacArgs>
+                    <javacArg>-source</javacArg>
+                    <javacArg>${java.version}</javacArg>
+                    <javacArg>-target</javacArg>
+                    <javacArg>${java.version}</javacArg>
+                </javacArgs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>scala-compile-first</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>scala-test-compile-first</id>
+                    <phase>process-test-resources</phase>
+                    <goals>
+                        <goal>testCompile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <!-- compiles java -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
+                <compilerArgs>
+                    <arg>-Xlint:all,-serial</arg>
+                </compilerArgs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <!--enable surefire for java tests -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <configuration>
+                <testSourceDirectory>/src/test/java/</testSourceDirectory>
+            </configuration>
+        </plugin>
+
+        <!-- enable scalatest for scala tests -->
+        <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>1.0</version>
+            <configuration>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                <junitxml>.</junitxml>
+                <filereports>WDF TestSuite.txt</filereports>
+                <argLine>-XX:MaxPermSize=256m -Xmx2g</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>test</id>
+                    <goals>
+                        <goal>test</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+                <skipIfEmpty>true</skipIfEmpty>
+            </configuration>
+        </plugin>
+
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
